[package]
name = "michis_collection_cursor"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

description = "A cursor which wraps an indexable collection, providing a movable position which points to an index of the collection. Useful for things like history, undo-redo systems, or timelines."
readme = true
repository = "https://github.com/LikeLakers2/michis_collection_cursor"
license = "MIT OR Apache-2.0"
keywords = ["collection", "cursor", "collection_cursor", "head"]
categories = ["data-structures"]

[dependencies]
# (De)Serialization
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }

# IndexableCollection impls on foreign crates
arrayvec = { version = "0.7", optional = true, default-features = false }
generic-array = { version = "1", optional = true, default-features = false }
smallvec = { version = "1", optional = true, default-features = false }
tinyvec = { version = "1", optional = true, default-features = false }

[features]
default = ["core", "alloc"]

# Adds (de)serialization support to the crate
serde = ["dep:serde"]

# Implements the `IndexableCollection*` traits on applicable types within crates that are built into
# Rust, such as `core` or `alloc`.
#
# If used in combination with other features meant for foreign crates, certain features on those
# foreign crates will also be enabled.
core = []
alloc = ["tinyvec?/alloc"]

# Implements the `IndexableCollection*` traits on applicable types within foreign crates. Each crate
# is its own feature.
#
# If used in combination with the `alloc` feature, certain crates may have their `alloc` feature
# enabled.
arrayvec = ["dep:arrayvec"]
generic-array = ["dep:generic-array"]
smallvec = ["dep:smallvec"]
tinyvec = ["dep:tinyvec"]

[lints]
clippy.allow_attributes_without_reason = "forbid"
clippy.cargo_common_metadata = "warn"
clippy.doc_markdown = "warn"
clippy.semicolon_if_nothing_returned = "warn"
clippy.semicolon_inside_block = "warn"

# All errors and safety conditions must be documented
clippy.missing_errors_doc = "warn"
clippy.missing_panics_doc = "forbid"
clippy.missing_safety_doc = "forbid"

# We are no-std by default, so try to use `core`, then `alloc`, then `std`.
clippy.alloc_instead_of_core = "forbid"
clippy.std_instead_of_alloc = "forbid"
clippy.std_instead_of_core = "forbid"
